<resources>
    <string name="app_name">MatchManager</string>
    <string name="s_seconds_ago">%s seconds ago</string>
    <string name="s_second_ago">%s second ago</string>
    <string name="s_days_ago">%s days ago</string>
    <string name="s_day_ago">%s day ago</string>
    <string name="s_months_ago">%s months ago</string>
    <string name="s_month_ago">%s month ago</string>
    <string name="s_years_ago">" %s years ago</string>
    <string name="s_year_ago">%s year ago</string>
    <string name="s_minutes_ago">%s minutes ago</string>
    <string name="s_minute_ago">%s minute ago</string>
    <string name="s_hours_ago">%s hours ago</string>
    <string name="s_hour_ago">%s hour ago</string>
    <string name="unknown_error_has_occurred">An unknown error has occurred.</string>
    <string name="request_got_cancelled">Request got cancelled</string>
    <string name="filter">Filter</string>
    <string name="matches">Matches</string>
    <string name="season_colon">Season:</string>
    <string name="team_colon">Team:</string>
    <string name="tournament_colon">Tournament:</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter_matches">Filter Matches</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="failed_to_load_some_information">Failed loading some information</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="select_season">Select Season</string>
    <string name="select_club">Select Club</string>
    <string name="select_tournament">Select Tournament</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="type_colon">Type:</string>
    <string name="field_colon">Field:</string>
    <string name="where_is_the_match">Where is the match?</string>
    <string name="create_match">Create Match</string>
    <string name="create_new_match">Create New Match</string>
    <string name="the_field_cannot_be_empty">The field cannot be empty.</string>
    <string name="unknonw_response_format">Unknown response format</string>
    <string name="major_players">Major Players</string>
    <string name="secondary_players">Secondary Players</string>
    <string name="team_formation">Team Formation</string>
    <string name="number_of_players_is_less_than_11">Number of players is less than 11!</string>
    <string name="number_of_positions_is_less_than_11">Number of positions is less than 11</string>
    <string name="is_captain">Is Captain?</string>
    <string name="captain_question">Captain?</string>
    <string name="select_position">Select Position</string>
    <string name="select_player">Select Player</string>
    <string name="you_must_select_11_players_with_their_positions">You must select 11 major players with their positions.</string>
    <string name="you_must_select_a_captain">You must select a captain.</string>
    <string name="at_minute">\@minute: %d</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_delete_this_event">Are you sure you want to delete this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_event">Create Event</string>
    <string name="goal">Goal</string>
    <string name="change">Change</string>
    <string name="warning">Warning</string>
    <string name="kick">Kick</string>
    <string name="player_name">Player Name</string>
    <string name="player_number">Player Number</string>
    <string name="player_colon">Player:</string>
    <string name="at_what_minute_the_event_occurred">At what minute the event occurred?</string>
    <string name="other_notes">Other notes</string>
    <string name="notes_colon">Notes:</string>
    <string name="minute_colon">Minute:</string>
    <string name="create">Create</string>
    <string name="create_s_event">Create a %s event</string>
    <string name="you_must_fill_in_the_player_name_and_number">You must fill in the player\'s name and number.</string>
    <string name="you_must_fill_in_the_minute_field">You must fill in the minute field</string>
    <string name="match_hosted_locally">Match hosted locally?</string>
    <string name="club_colon">Club:</string>
    <string name="match_half">Match Half</string>
    <string name="change_with_colon">Change with:</string>
    <string name="old_and_new_players_cannot_be_the_same">Old and new players cannot be the same.</string>
</resources>
